--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link ref="stylesheet" type="text/css" href="https://tanith-rhea.github.io/pagestyle.css">
-  <link ref="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700|Overpass:100,100i,200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&subset=latin-ext">
+  <link ref="stylesheet" href="https://fontlibrary.org/face/overpass">
 </head>
 <body>
 <h1>Hello World</h1>
