--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link ref="stylesheet" type="text/css" href="https://tanith-rhea.github.io/pagestyle.css">
-  <link ref="stylesheet" href="https://fontlibrary.org/face/overpass">
+  <link rel="stylesheet" type="text/css" href="https://tanith-rhea.github.io/pagestyle.css">
+  <link href="https://fonts.googleapis.com/css?family=Overpass: 400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 <body>
 <h1>Hello World</h1>
